--- a/_sass/variables.scss
+++ b/_sass/variables.scss
@@ -22,7 +22,7 @@ $comp-color 	     : complement(#222);
 
 //button colors
 $success			 : #5cb85c;
-$warning			 : #dd8338;
+$warning			 : #f68205;
 $danger				 : #C64537;
 $info		         : #308cbc;
 
