--- a/assets/css/main.scss
+++ b/assets/css/main.scss
@@ -4,10 +4,10 @@ sitemap: false
 
 /*
  *
- *  Moon
+ *  Embrace
  *
- *  Designer: Taylan Tatlı
- *  WEB: http://taylantatli.me
+ *  Designer: Sean Lasater
+ *  WEB: http://seanembrace.github.io
  *
 */
 
